--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
-    "ownerNumber": ["94764497078@s.whatsapp.net","94764497078@s.whatsapp.net"],
-    "ownerName": "SANDARU",
+    "ownerNumber": ["94778138202@s.whatsapp.net","94764497078@s.whatsapp.net"],
+    "ownerName": "Themi",
     "instagram" : "https://instagram.com/nicetry.zaa._",
-    "botName": "SANDARU MD ",
+    "botName": "
+THEMI MD ",
     "footer": "api.zeeoneofc.xyz",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
